ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    app: frontend
  namespace: ingress-testing
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - # path: /blogz
        # The below one is used to manage static files 
        path: /frontend/
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
